added template & removed comments
